feat(prelaunch): close roadmap §2.1 + 2.2 + 2.3 + 2.4 + 2.5 + 3.6 + pool-exhausted bug
Five critical pre-launch gaps closed in one bundle. The proto + Flyway
migrations interlock across services so they must land together.

§2.1 Auth — real signup/login/JWT verification (api-gateway):
  * Argon2id password hash (Spring Security crypto + BouncyCastle)
  * Endpoints: POST /api/v1/auth/{signup,login,refresh,logout}
  * Refresh-token rotation; only SHA-256(token) stored server-side
  * JWT now carries kid header for key rotation; typ=access vs refresh
  * Dev mint POST /api/v1/auth/token DELETED
  * SecurityConfig: everything except /actuator/health + /auth/{signup,login,refresh}
    requires a valid access token
  * V5__auth.sql adds password_hash, refresh_tokens, auth_events
  * AuthServiceTest with 7 happy/edge tests

§2.2 Schema discipline — one DB, one migration tool:
  * Every service connects to `onlinejudge` (api-gateway, execution-worker,
    problem-service, contest-service-dev-yml)
  * V3__unify_schema.sql idempotently adds problems / test_cases / users
    to onlinejudge so Flyway can land them once api-gateway flips
  * problem-service entity widened int→long (CRDB INT is BIGINT)
  * SPRING_JPA_HIBERNATE_DDL_AUTO=none override DROPPED — `validate` is
    the right end state now that entity types match
  * init.sql replaced with OBSOLETE banner; mount removed from compose;
    terraform stops base64-injecting it
  * infra/scripts/db-migration-onlinejudge.sql — operator runbook that
    DROPs orphan onlinejudge.{submissions,outbox_events,idempotency_keys}
    (wrong shape from old init.sql path) then INSERT…SELECT-copies the
    live defaultdb rows over after Flyway lands

§2.3 Per-problem time/memory limits propagated to the agent:
  * problem-service /test-cases response now wraps the array as
    TestCaseBundle { time_limit_ms, memory_limit_mb, test_cases[] }
  * ProblemServiceClient + TestCaseFetcher.ProblemSpec carry limits
  * FirecrackerExecutionServic